# automatey

./: .gitignore  README.md  install.bat  install_no_deps.bat  pyproject.toml  setup.py
automatey/cli/: __init__.py
automatey/cli/img/faces/: __init__.py
automatey/cli/utils/: __init__.py
automatey/cli/utils/constants/: __init__.py
automatey/utils/: __init__.py
src/automatey/: CMD.py  CMDUtils.py  ExceptionUtils.py  FileManagement.py  FileUtils.py  MathUtils.py  MediaUtils.py  ProcessUtils.py  RandomUtils.py  StringUtils.py  TimeUtils.py  __init__.py  numbers.py
src/automatey/Abstract/: Graphics.py  Input.py
src/automatey/Base/: ColorUtils.py  ExceptionUtils.py  Graphics.py  TimeUtils.py
src/automatey/Formats/: ARXML.py  CSV.py  JSON.py  PDF.py  SRT.py  XMLParser.py
src/automatey/GUI/: GConcurrency.py  GElements.py  GUtils.py
src/automatey/GUI/Wrappers/: PyQt6.py  PySide6.py
src/automatey/Media/: ImageUtils.py  MediaUtils.py  VideoUtils.py
src/automatey/OS/: Clipboard.py  FileUtils.py  ProcessUtils.py  Utils.py
src/automatey/OS/Specific/: Windows.py
src/automatey/Resources/: __init__.py
src/automatey/Utils/: Algorithms.py  CLI.py  ColorUtils.py  Cryptography.py  DataStructure.py  ExceptionUtils.py  MathUtils.py  PlotUtils.py  PyUtils.py  RandomUtils.py  StringUtils.py  Validation.py
