[tool.poetry]
name = "automatey"
version = "0.1.0"
description = "Automate everything!"
authors = ["Hazem Anwer"]
license = "None"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
send2trash = "^1.8.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
